--- a/jenkins-server/Dockerfile
+++ b/jenkins-server/Dockerfile
@@ -7,4 +7,4 @@ RUN apt-get install -q -y openjdk-7-jre-headless
 ADD http://mirrors.jenkins-ci.org/war/latest/jenkins.war /root/jenkins.war
 
 EXPOSE 8080
-CMD ["java", "-jar", "/root/jenkins.war"]
+ENTRYPOINT ["java", "-jar", "/root/jenkins.war"]
